--- a/biday-back/build.gradle
+++ b/biday-back/build.gradle
@@ -26,7 +26,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 //	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -39,6 +39,18 @@ dependencies {
 
 // swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
+	// image-strage
+	// https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5
+//	implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.3.1'
+
+	implementation 'org.apache.httpcomponents.client5:httpclient5'
+//	implementation 'org.apache.hc:httpclient5:5.3'
+
+	// mongoDB
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -56,7 +68,7 @@ tasks.named('test') {
 }
 
 ext {
-	querydslVersion = '5.0.0'
+
 	applicationVersion = "1.0.0"
 }
 
