--- a/biday-back/build.gradle
+++ b/biday-back/build.gradle
@@ -52,11 +52,8 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
     // image-strage
-    // https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5
-//	implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.3.1'
-
-    implementation 'org.apache.httpcomponents.client5:httpclient5'
-//	implementation 'org.apache.hc:httpclient5:5.3'
+    implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.529')
+    implementation 'com.amazonaws:aws-java-sdk-s3'
 
     // mongoDB
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
