--- a/biday-back/build.gradle
+++ b/biday-back/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     // swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
-    // image-strage
+    // image-storage
     implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.529')
     implementation 'com.amazonaws:aws-java-sdk-s3'
 
